--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -6,29 +6,12 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-      - name: Setup Node.js
-        uses: actions/setup-node@v2.4.0
+      - name: Custom semantic release
+        uses: cogni8r/semantic-release-action@v1
         with:
-          node-version: 16
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v4
-        with:
-          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.GPG_PASSPHRASE }}
-          git_user_signingkey: true
-          git_commit_gpgsign: true
-      - name: Install dependencies
-        run: npm ci
-      - name: Install semantic-release plugins
-        run: npm i @semantic-release/changelog @semantic-release/git @semantic-release/exec replace
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GIT_AUTHOR_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
-          GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
-          GIT_COMMITTER_NAME:  ${{ secrets.GIT_AUTHOR_NAME }}
-          GIT_COMMITTER_EMAIL:  ${{ secrets.GIT_AUTHOR_EMAIL }}
-        run: npx semantic-release
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          github-token: ${{ secrets.BOT_TOKEN }}
+          npm-token: ${{ secrets.NPM_TOKEN }}
+          git-author-name: ${{ secrets.GIT_AUTHOR_NAME }}
+          git-author-email: ${{ secrets.GIT_AUTHOR_EMAIL }}
